# openforce

./: .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  Idea3.md  LICENSE  README.md  hello.py  idea2.md  main.py  moltis-architecture.md  pytest.ini  requirements.txt  恭王府参观攻略.md
.claude/: settings.local.json
.openforce/sessions/: 019e3516-d19a-7f30-95f9-70761518a47c.json  019e3517-9544-7091-804b-75fcdc82d0a9.json  019e3519-bec4-7572-a8af-240d43a5c19f.json  019e3526-de08-7413-be91-6011aa51e6fa.json  019e3592-61be-7571-b657-4b67dd0d8d36.json  019e35e4-cf6b-70c3-b6e1-c32152cc7aec.json  019e3610-781d-7930-9822-d6231902b46d.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/01-security-fixes/: 00-00-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-04-PLAN.md  01-05-PLAN.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
config/: models.yaml.example
crates/cube-sandbox/: Cargo.toml
crates/cube-sandbox/src/: api.rs  config.rs  error.rs  image.rs  lib.rs  network.rs  snapshot.rs  vm.rs
crates/domain/: Cargo.toml
crates/domain/src/: approval.rs  command.rs  effect.rs  error.rs  event.rs  identity.rs  lease.rs  lib.rs  patch.rs  plan.rs  sandbox_image.rs  session.rs  session_phase.rs  task.rs  tenant.rs  worker_spec.rs
crates/effect-gateway/: Cargo.toml
crates/effect-gateway/src/: lib.rs  main.rs  outbox.rs  server.rs  store.rs
crates/evolution/: Cargo.toml
crates/evolution/src/: canary.rs  evaluator.rs  evolver.rs  lib.rs  observer.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: bootstrap.rs  lib.rs  main.rs
crates/gateway/src/handler/: approvals.rs  effects.rs  mod.rs  project_tools.rs
crates/gateway/src/mapper/: mod.rs
crates/gateway/src/middleware/: logging.rs  mod.rs  request_id.rs  timeout.rs
crates/knowledge-base/: Cargo.toml
crates/launch-checker/: Cargo.toml
crates/launch-checker/src/: decision.rs  lib.rs  red_team.rs  release_gate.rs
crates/llm-client/: Cargo.toml
crates/llm-client/src/: anthropic.rs  lib.rs  openai.rs  unified.rs
crates/mtls/: Cargo.toml
crates/mtls/src/: ca.rs  config.rs  error.rs  identity.rs  lib.rs  rotation.rs
crates/node-daemon/: Cargo.toml
crates/node-daemon/src/: main.rs
crates/openforce-cli/: Cargo.toml
crates/openforce-cli/src/: dag_executor.rs  gate_handler.rs  main.rs  planner_roundtable.rs  repl.rs  session_manager.rs  session_state.rs  skill_runner.rs  web_search.rs
crates/patch-classifier/: Cargo.toml
crates/path-acl/: Cargo.toml
crates/policy-engine/: Cargo.toml
crates/policy-engine/src/: engine.rs  lib.rs  rules.rs  tests.rs
crates/project-tools/: Cargo.toml
crates/project-tools/src/: approval_store.rs  lib.rs  main.rs  server.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/swarmos/v1/: common.proto  effects.proto  mtls.proto  node_daemon.proto  project_tools.proto  sandbox.proto  scheduler.proto  session.proto
crates/proto/src/: lib.rs
crates/redis-session/: Cargo.toml
crates/redis-session/src/: lib.rs  store.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: capability_token.rs  client.rs  dag.rs  kill_switch.rs  lease_service.rs  main.rs  quota.rs  retry.rs  scheduler_loop.rs  server.rs  worker_spec_builder.rs
crates/session-store/: Cargo.toml
crates/session-store/migrations/: 001_event_log_and_dedup.sql  002_session_and_task_projection.sql  003_lease_and_worker_spec.sql  004_plan_epoch_mappings.sql  005_projection_build_functions.sql
crates/session-store/src/: command_handler.rs  lib.rs  main.rs  projection.rs  repo.rs  server.rs  store.rs
crates/session-store/src/crates/patch-classifier/src/: classifier.rs  lib.rs
crates/session-store/src/crates/path-acl/src/: acl.rs
crates/session-store/src/crates/policy-engine/src/: budget.rs  kill_switch.rs  lib.rs  model_egress.rs  tenant_policy.rs  tool_policy.rs
crates/session-store/src/crates/project-tools/src/: approval_store.rs  server.rs
crates/session-store/src/crates/scheduler/src/: client.rs  dag.rs  kill_switch.rs  lease_service.rs  lib.rs  main.rs  quota.rs  retry.rs  scheduler_loop.rs  server.rs  worker_spec_builder.rs
crates/space-manager/: Cargo.toml
crates/space-manager/src/: lib.rs  main.rs  pool.rs  sandbox.rs  snapshot.rs
crates/tenant-governance/: Cargo.toml
crates/tenant-governance/src/: byok.rs  lib.rs  offboarding.rs  quota.rs  retention.rs
crates/tui-dashboard/: Cargo.toml
crates/tui-dashboard/src/: app.rs  client.rs  main.rs
crates/tui-dashboard/src/components/: approval.rs  command.rs  mod.rs  status.rs
crates/worker/: Cargo.toml
crates/worker/src/: main.rs
docs/: ENTERPRISE_SOLUTION.md  INVESTOR_PITCH.md  performance-optimization.md
experts/: README.md  index.json
experts/experience/: session_019e34d2.json  session_019e3527.json  session_019e3597.json  session_019e3614.json
experts/profiles/: api_designer.json  architect.json  backend_expert.json  frontend_expert.json  go_developer.json  python_developer.json  react_developer.json  rust_reviewer.json  security_auditor.json  sql_specialist.json  test_engineer.json
experts/sop/: architecture_design.md  backend_crud_delivery.md  deployment_pipeline.md  frontend_component_delivery.md  go_microservice_delivery.md  python_fastapi_delivery.md  security_audit.md
prompts/: hubu_research.md  shangshu_orchestrator.md  zhongshu_system.md
scripts/: baidu_search.py
skills/deerflow/: .gitignore  README.md  SKILL.md  adapter.py  config.example.yaml  manifest.toml  pyproject.toml  requirements.txt  tesla_vs_byd.md
skills/deerflow/deerflow/community/jina_ai/: jina_client.py  tools.py
skills/deerflow/deerflow/runtime/: user_context.py
skills/deerflow/lib/: __init__.py  config.py  errors.py  modes.py  stream.py  subagent.py  tools.py
skills/deerflow/scripts/: chat.sh  package.sh  skill.py
src/agents/: bingbu.py  duchayuan.py  gongbu.py  hubu.py  libu.py  libu2.py  shangshu.py  xingbu.py  zhongshu.py
src/budget/: __init__.py  callbacks.py  circuit_breaker.py  isolation.py  manager.py  persistence.py  (+2 more)
tests/: conftest.py
(+148 files in other folders)
