[package]
name = "openforce-cube-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
openforce-domain = { path = "../domain" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
sha2 = { workspace = true }
libc = "0.2"
ring = { workspace = true }
