[package]
name = "openforce-domain"
version = "0.1.0"
edition = "2021"

[dependencies]
openforce-proto = { path = "../proto" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
rstest = { workspace = true }
