[package]
name = "openforce-effect-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "effect-gateway"
path = "src/main.rs"

[dependencies]
openforce-proto = { path = "../proto" }
openforce-domain = { path = "../domain" }
openforce-policy-engine = { path = "../policy-engine" }
tokio = { workspace = true }
tokio-stream = "0.1"
tonic = { workspace = true }
tonic-health = { workspace = true }
tonic-reflection = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "postgres"] }
prost-types = "0.13"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
