[package]
name = "openforce-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
openforce-proto = { path = "../proto" }
tokio = { workspace = true }
tokio-stream = "0.1"
tonic = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "request-id"] }
