[package]
name = "openforce-launch-checker"
version = "0.1.0"
edition = "2021"
description = "OpenForce launch validation — release gates, red-team scenarios, go/no-go decisions"
license = "MIT"
[dependencies]
openforce-domain = { path = "../domain" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
