[package]
name = "openforce-llm-client"
version = "0.1.0"
edition = "2021"
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
uuid = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
