[package]
name = "openforce-cli"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "openforce"
path = "src/main.rs"
[dependencies]
walkdir = "2"
toml = "0.8"
openforce-domain = { path = "../domain" }
openforce-llm-client = { path = "../llm-client" }
openforce-knowledge-base = { path = "../knowledge-base" }
openforce-session-store = { path = "../session-store" }
tokio = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
openforce-redis-session = { path = "../redis-session" }
