[package]
name = "openforce-policy-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
openforce-domain = { path = "../domain" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
