[package]
name = "openforce-proto"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
prost = { workspace = true }
prost-types = "0.13"
tonic = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"
