[package]
name = "openforce-scheduler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scheduler"
path = "src/main.rs"

[dependencies]
openforce-proto = { path = "../proto" }
openforce-domain = { path = "../domain" }
openforce-policy-engine = { path = "../policy-engine" }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tonic-reflection = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = { workspace = true }
