[package]
name = "openforce-space-manager"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "space-manager"
path = "src/main.rs"
[dependencies]
openforce-domain = { path = "../domain" }
openforce-cube-sandbox = { path = "../cube-sandbox" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = { workspace = true }
