[package]
name = "openforce-tenant-governance"
version = "0.1.0"
edition = "2021"
[dependencies]
openforce-domain = { path = "../domain" }
openforce-policy-engine = { path = "../policy-engine" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
