[package]
name = "openforce-tui-dashboard"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tui"
path = "src/main.rs"

[dependencies]
openforce-proto = { path = "../proto" }
openforce-domain = { path = "../domain" }
tokio = { workspace = true }
tonic = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = "0.28"
crossterm = "0.28"
anyhow = { workspace = true }
