[project]
name = "deerflow-skill"
version = "0.1.0"
description = "Claude Code skill for deer-flow agent orchestration"
requires-python = ">=3.12"
dependencies = [
    "deerflow-harness>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
